# chorus

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: publish-hub.yml  test.yml
docs/chorus/: INDEX.md  e2e-testing.md  getting-started.md  reference.md
hub/: bot.py  config.py  main.py  router.py
hub/tests/: test_bot.py  test_bot_enhanced.py  test_config.py  test_configure.py  test_integration.py  test_main.py  test_main_client_wiring.py  test_router.py  test_router_stop_typing.py  test_shutdown.py
relay/: package.json
